--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "superagent": "^3.8.2",
-    "underscore": "^1.8.3"
+    "superagent": "^3.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
